scripts/nullaway/wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8.txt
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:68: error: [NullAway] dereferenced expression coefficients is @Nullable
                    coefficients[i] = src.coefficients[i];
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:68: error: [NullAway] dereferenced expression src.coefficients is @Nullable
                    coefficients[i] = src.coefficients[i];
                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:72: error: [NullAway] dereferenced expression coefficients is @Nullable
                    coefficients[i] = BigInteger.ZERO;
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:153: error: [NullAway] dereferenced expression coefficients is @Nullable
            coefficients[i + fpadding] = coefficients[i + fpadding].multiply(coefficient);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:153: error: [NullAway] dereferenced expression coefficients is @Nullable
            coefficients[i + fpadding] = coefficients[i + fpadding].multiply(coefficient);
                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:183: error: [NullAway] dereferenced expression o_coefficients is @Nullable
                acc = acc.add(o_coefficients[i + ypadding]);
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:184: error: [NullAway] dereferenced expression coefficients is @Nullable
                coefficients[i + nystart + fpadding - ymin] = acc;
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:188: error: [NullAway] dereferenced expression coefficients is @Nullable
                coefficients[i + nystart + fpadding - ymin] = acc;
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:193: error: [NullAway] dereferenced expression o_coefficients is @Nullable
                sub = sub.add(o_coefficients[i + ypadding - depth]);
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:195: error: [NullAway] dereferenced expression coefficients is @Nullable
                coefficients[i + fpadding] = acc.subtract(sub);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:199: error: [NullAway] dereferenced expression o_coefficients is @Nullable
                sub = sub.add(o_coefficients[i + ypadding - depth]);
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:200: error: [NullAway] dereferenced expression coefficients is @Nullable
                coefficients[i + fpadding] = acc.subtract(sub);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:254: error: [NullAway] dereferenced expression coefficients is @Nullable
        return coefficients[(i + fpadding) - ymin];
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:259: error: [NullAway] dereferenced expression coefficients is @Nullable
        coefficients[(i + fpadding) - ymin] = v;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:339: error: [NullAway] dereferenced expression o_coefficients is @Nullable
                    this.set(i, o_coefficients[(i + o_fpadding) - o_ymin]);
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:362: error: [NullAway] dereferenced expression src.coefficients is @Nullable
                coefficients[i] = src.coefficients[i];
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:46: error: [NullAway] dereferenced expression resultTriple is @Nullable
        return resultTriple.third;
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:333: error: [NullAway] unboxing of a @Nullable value
                    g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:333: error: [NullAway] unboxing of a @Nullable value
                    g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:333: error: [NullAway] passing @Nullable parameter 'shuffle.get(e.first())' where @NonNull is required
                    g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:333: error: [NullAway] passing @Nullable parameter 'shuffle.get(e.second())' where @NonNull is required
                    g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/AdjacencyList.java:196: error: [NullAway] unboxing of a @Nullable value
                tos.put(to, i + c);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/AdjacencyList.java:229: error: [NullAway] unboxing of a @Nullable value
                    edges.get(to).put(from, i - c);
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:47: error: [NullAway] dereferenced expression g2_partitions is @Nullable
                    BitSet g2_partition = g2_partitions.get(j);
                                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:66: error: [NullAway] dereferenced expression partitions is @Nullable
        Matrix weights = new Matrix(partitions.size(), partitions.size());
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:84: error: [NullAway] dereferenced expression partitions is @Nullable
            for (int i = 0; i != partitions.size(); ++i) {
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:179: error: [NullAway] dereferenced expression partitions is @Nullable
        for (int i = 0; i != partitions.size(); ++i) {
                                       ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Pair.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
